# monitor-ctrl

./: .gitignore  Cargo.toml  README.md  build.rs  notes.md
src/: config.rs  ddc.rs  hotkeys.rs  main.rs  monitors.rs  settings_ui.rs  startup.rs  tray.rs
